--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "serve": "live-server public/",
     "build:dev": "webpack --mode development",
-    "build:prod": "webpack -p",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --open --mode development",
-    "test": "jest"
+    "test": "jest",
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
     "@babel/cli": "^7.2.3",
@@ -19,8 +21,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "express": "^4.16.4",
     "jest": "^24.5.0",
     "live-server": "^1.2.1",
     "moment": "^2.24.0",
@@ -43,6 +44,9 @@
     "webpack-dev-server": "^3.1.14"
   },
   "devDependencies": {
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "webpack-cli": "^3.2.1"
   }
 }
