--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:dev": "webpack --mode development",
     "build:prod": "webpack -p --env production",
-    "dev-server": "webpack-dev-server --open --mode development",
+    "dev-server": "webpack-dev-server --hot --inline --open --mode development",
     "test": "jest",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
@@ -18,30 +18,43 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.4.2",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
+    "better-react-spinkit": "^2.0.4",
+    "cors": "^2.8.5",
     "css-loader": "^2.1.0",
     "express": "^4.16.4",
+    "file-loader": "^3.0.1",
+    "history": "^4.9.0",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.8.4",
+    "react": "^16.8.5",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-datepicker": "^2.1.0",
     "react-dates": "^20.1.0",
     "react-dom": "^16.8.4",
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
+    "react-toastify": "^5.0.0-rc.6",
+    "react-topbar-progress-indicator": "^2.0.0",
     "react-with-direction": "^1.3.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "validator": "^10.11.0",
     "webpack": "^4.28.4"
   },
   "devDependencies": {
-    "jest": "^24.5.0",
+    "@babel/plugin-transform-runtime": "^7.4.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.5.0",
     "mini-css-extract-plugin": "^0.5.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
