--- a/package.json
+++ b/package.json
@@ -31,15 +31,16 @@
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.6",
-    "react-datepicker": "^2.1.0",
     "react-dates": "^20.1.0",
     "react-dom": "^16.8.4",
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
-    "react-toastify": "^5.0.0-rc.6",
+    "react-table": "^6.9.2",
+    "react-toastify": "^4.5.2",
     "react-topbar-progress-indicator": "^2.0.0",
     "react-with-direction": "^1.3.0",
     "redux": "^4.0.1",
