--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "indecision-app",
+  "name": "SendIT-React",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -7,9 +7,18 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --hot --inline --open --mode development",
-    "test": "jest",
+    "test": "jest --coverage",
     "start": "node server/server.js",
     "heroku-postbuild": "npm run build:prod"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./src/tests/setupTests.js"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fixtures.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    }
   },
   "dependencies": {
     "@babel/cli": "^7.2.3",
@@ -24,14 +33,22 @@
     "better-react-spinkit": "^2.0.4",
     "cors": "^2.8.5",
     "css-loader": "^2.1.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
+    "enzyme-to-json": "^3.3.5",
     "express": "^4.16.4",
     "file-loader": "^3.0.1",
     "history": "^4.9.0",
+    "identity-obj-proxy": "^3.0.0",
+    "ignore-styles": "^5.0.1",
+    "jest": "^24.5.0",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
+    "raf": "^3.4.1",
     "react": "^16.8.5",
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dates": "^20.1.0",
@@ -40,11 +57,13 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-table": "^6.9.2",
+    "react-test-renderer": "^16.8.6",
     "react-toastify": "^4.5.2",
     "react-topbar-progress-indicator": "^2.0.0",
     "react-with-direction": "^1.3.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
