--- a/package.json
+++ b/package.json
@@ -66,8 +66,10 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "resolve-url-loader": "^3.1.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "validator": "^10.11.0",
     "webpack": "^4.28.4"
   },
